# VidyoPortal

./: README.md  build.config  build.gradle  create_portal_package.sh  gradle.properties  settings.gradle  test.txt
Admin/: .project  build.gradle  settings.gradle
Super/: .project  build.gradle  settings.gradle
SuperService/: .project  build.gradle  settings.gradle
VidyoHA/clusterip/src/: Makefile.am  admin.cpp  checksum.cpp  cluster_admin.cpp  cluster_signals.cpp  clusterinfo.cpp  clusterip.cpp  clusterip_multi.cpp  csocket.cpp  miscutils.cpp  params.cpp  pinger.cpp  reqmsg.cpp  statemachine.cpp
VidyoHA/clusterip_v2/: configure.ac
VidyoHA/clusterip_v2/include/: clusterinfo.h  clusterip.h  dbversion.h  link_watcher.h  miscutils.h  params.h  reqmsg.h  statemachine.h
VidyoHA/clusterip_v2/src/: Makefile.am  active_nolink_nostandby.cpp  active_nolink_standby_nolink.cpp  active_nostandby.cpp  active_with_standby.cpp  active_with_standby_nolink.cpp  admin.cpp  checksum.cpp  cluster_admin.cpp  cluster_signals.cpp  clusterinfo.cpp  clusterip.cpp  dbversion.cpp  link_watcher.cpp  maintenance.cpp  miscutils.cpp  negotiate.cpp  negotiate_nolink.cpp  params.cpp  reboot.cpp  reqmsg.cpp  standby.cpp  standby_nolink.cpp  statemachine.cpp
VidyoPortal/: .project  build.gradle  gradle.properties  settings.gradle
VidyoPortalRoot/: .project  build.gradle  settings.gradle
VidyoRouter2Conf/: .project  build.gradle  settings.gradle
platform/: apache2.conf  apacheLogSetting  default_thumbnail.base64  headers.conf  java.security  java.security.default  java.security.fips  limits.conf  localvrconfig.template  logging.properties  loginbanner.disa  mime.types  my.cnf  my.cnf.16gb  my.cnf.24gb  my.cnf.8gb  my.cnf.template  mycacerts.cer  portal.tomcat.conf  rc.local  router.tomcat.conf  sudoers.dbsync  sudoers.portal  sudoers.vpbatch  tomcat.sudoers.portal.default  tomcat.sudoers.router.default  usr.sbin.tcpdump  vidyoca.crt  welcomebanner.disa
scripts/: CreatePortal20Db.sh  ResetStuckGWVEPs.sh  StartVC2.sh  StopVC2.sh  UpdateLicenseCache.sh  UpgradePortalDb.sh  backup_database.sh  cdr_user.sh  check_db.sh  common-functions.sh  compare_create_update_db.sh  config_nr.sh  create_db_snapshot.sh  (+34 more)
(+3809 files in other folders)
