#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT("clusterip", "1.0.0", "efernandez@vidyo.com")
AM_INIT_AUTOMAKE([-Wall -Werror  foreign])


# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_SUBDIRS([src])
AC_OUTPUT
